Fix toastr not showing on projects list

--- a/src/styles/components/_toastr.scss
+++ b/src/styles/components/_toastr.scss
@@ -27,7 +27,7 @@
   position: relative;
   display: block;
   height: auto;
-  overflow: visible
+  overflow: visible;
   #toast-container{
     position: static;
   }
